# greps

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  tests.yml
greps/: __init__.py  greps.py
tests/: conftest.py  test_magic.py
